test/neg/bug118.scala
class C(y: Int) {
    def this() = {
    	return null;
    	this(1);
    }
}
